@@ -2,6 +2,11 @@
 X3 ChangeLog
 
 2007-03-20  Alex Schumann  <rubin@afternet.org>
+ 
+        * src/nickserv.c: fix trying to do ldap when not enabled during
+	cmd_register
+
+2007-03-20  Alex Schumann  <rubin@afternet.org>
 
         * src/opserv.c: fix for stats alerts filtering
 
